maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: illegal start of simple pattern
			case 0 -> if (!estFaceMur) {avance()}
                                  ^RandomMouseMaze:9: error: '=>' expected but '}' found.
		}
                ^